# asr_recognizer_prediction_ism

./: CMakeLists.txt  License.txt  README.md  package.xml
cfg/: pose_prediction.cfg  recognizer.cfg
include/asr_recognizer_prediction_ism/: ism_helper.h  param_helper.h  pose_prediction.h  resampler.h  scene_recognition.h  shared_recognition_results_manager.h
launch/: rp_ism_node.launch
launch/helpers/: scene_recognition.yaml
log/: rosconsole.config
param/: pose_prediction.yaml  scene_recognition.yaml
src/: ism_helper.cpp  param_helper.cpp  pose_prediction.cpp  resampler.cpp  rp_ism_node.cpp  scene_recognition.cpp  shared_recognition_results_manager.cpp
srv/: FindScenes.srv  GetPointCloud.srv  SetLogDir.srv
test/: test_properties.yaml  test_rp_ism_node.launch
test/experiment/: experiment_1.sqlite  pose_prediction_test.py  scene_recognizer_1_object_test.py  scene_recognizer_2_objects_test.py
test/levels/: levels.sqlite  levels.xml  manualHeuristic.txt  referenceSample.txt  scene_recognizer_1_object_test.py
test/misc/: world_model_test.py
test/rsc/: .sample.xml.swo  experiment_1_backup.sqlite  experiment_2_part_1.sqlite  experiment_2_part_1_and_2.sqlite  experiment_2_part_1_and_2_backup.sqlite  experiment_2_part_1_backup.sqlite  record.sqlite.optedTrainer_example_1.sqlite  record.sqlite.optedTrainer_example_2.sqlite  sample.xml  smacks_throne.sqlite
test/src/: test_paper_prediction_normalized.cpp  test_recognizer_prediction_ism.cpp
